更新依赖项并优化项目结构
- 在`.gitignore`中添加了对`statik/`和`web/`目录的忽略，确保构建过程中的干净环境。
- 在`go.mod`和`go.sum`中添加了`github.com/rakyll/statik`库作为依赖项，以支持静态资源的生成。
- 修改`Makefile`以调整打包过程，确保生成的可执行文件被正确移动到`release`目录。
- 更新`openapi.yaml`，删除了不再使用的API定义，简化了接口文档。
- 在`cmd/cmd.go`中注册了新的配置文件生成命令，增强了命令行工具的功能。
- 删除了未使用的`entity/file.go`和`entity/gitlab.go`文件，优化了代码结构。
